# cubemars_ros2_control

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SYSTEM_TECHNICAL_OVERVIEW.md  install_ros2_humble.sh  my_robot_ros2_control.xml  package.xml
bringup/config/: my_robot_controllers.yaml
bringup/launch/: extruder.launch.py  moveit.launch.py  my_robot.launch.py  replay.launch.py
config/: bed_config.yaml  extruder_params.yaml  safe_poses.yaml
config/moveit/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  my_robot.srdf  planning_pipeline.yaml
description/ros2_control/: ros2_control_my_robot.xacro
description/urdf/: my_robot.description.urdf.xacro  my_robot.urdf  my_robot.urdf.xacro  my_robot_with_nozzle.description.urdf.xacro
description/urdf/meshes/: mesh_AK60-6_1.stl  mesh_AK60-6_2_1_Body1.stl  mesh_AK70-10_1_1_Body1.stl  mesh_AK70-10_2.stl  mesh_AK80-64_1.stl  mesh_AK80-64_2_1_Body1.stl  mesh_base_link_1_Body1.stl  mesh_link1_1.stl  mesh_link1_2_1_Body2.stl  mesh_link2_1_1_Body1.stl  mesh_link2_7.stl  mesh_link2_PLA_1_Body1.stl  mesh_link3_1_1_Body1.stl  mesh_link3_2_1_Body1.stl  mesh_link4_1_1_Body1.stl  mesh_link4_7.stl  mesh_link4_PLA.stl  mesh_link5_1.stl  mesh_link5_2_1_Body2.stl  mesh_link6_1_1_Body1.stl  mesh_tool0.stl  mesh_tool_nozzle_1_Body1.stl
firmware/: AGENT_CONTEXT.md  EXTRUDER_SERIAL_NOTES.md  extruder_no_oled.ino  oled_rgb.ino
hardware/: my_robot.cpp
hardware/include/my_robot_ros2_control/: can_csv_logger.hpp  cubemars_motors.hpp  motor_can_driver.hpp  motor_data.hpp  my_robot.hpp  teaching_data_logger.hpp
rviz/: my_robot.rviz
scripts/: PLANAR_MOTION.md  README.md  cartesian_test.py  hall_sensor.ino  joint_tracking_probe.py  move_home_zero.py  park_robot.py  planar_layer_motion.py  quick_joint_shape_print.py  teach_bed.py  teach_bed_by_joints.py  teach_bed_four_points.py  toolpath_layer_motion.py  verify_hall_polarity.py  visualize_planar_path.py  visualize_trajectory.py
src/: extruder_serial_node.cpp  job_runner_node.cpp  teaching_replay_node.cpp
